fixed image container on small device

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -106,4 +106,8 @@
     .about__content p {
         margin: 1.5rem 0;
     }
+    .about__me-block {
+        width: 300px;
+        height: 300px;
+    }
 }
